--- a/build.gradle
+++ b/build.gradle
@@ -1,55 +1,46 @@
 plugins {
     id 'java'
-    id("xyz.jpenilla.run-paper") version "2.3.1"
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group = 'pl.tenfajnybartek'
-version = '1.0.0-SNAPSHOT'
+version = '0.0.1-SNAPSHOT'
+archivesBaseName = 'tfbdeathban'
+
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 repositories {
     mavenCentral()
-    maven {
-        name = "papermc-repo"
-        url = "https://repo.papermc.io/repository/maven-public/"
-    }
+    maven { url = 'https://repo.papermc.io/repository/maven-public/' }
 }
 
 dependencies {
-    compileOnly("io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT")
+    compileOnly 'io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT'
+
+    implementation 'com.zaxxer:HikariCP:5.1.0'
+    implementation 'mysql:mysql-connector-java:8.0.33'
+
+    implementation 'net.kyori:adventure-api:4.14.0'
+    implementation 'net.kyori:adventure-platform-bukkit:4.3.2'
 }
 
-tasks {
-    runServer {
-        // Configure the Minecraft version for our task.
-        // This is the only required configuration besides applying the plugin.
-        // Your plugin's jar (or shadowJar if present) will be used automatically.
-        minecraftVersion("1.21")
-    }
-}
-
-def targetJavaVersion = 21
-java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    sourceCompatibility = javaVersion
-    targetCompatibility = javaVersion
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
-    }
-}
-
-tasks.withType(JavaCompile).configureEach {
+tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
-
-    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        options.release.set(targetJavaVersion)
-    }
 }
 
-processResources {
-    def props = [version: version]
-    inputs.properties props
-    filteringCharset 'UTF-8'
-    filesMatching('plugin.yml') {
-        expand props
-    }
+tasks.shadowJar {
+    archiveClassifier.set('')
+    // Opcjonalnie relokuj biblioteki (chroni przed konfliktami z innymi pluginami MC)
+    relocate('com.zaxxer.hikari', 'pl.tenfajnybartek.libs.hikari')
+    relocate('org.slf4j', 'pl.tenfajnybartek.libs.slf4j')
+    relocate('org.apache.commons', 'pl.tenfajnybartek.libs.commons')
+    relocate('com.mysql', 'pl.tenfajnybartek.libs.mysql')
+    relocate('net.kyori', 'pl.tenfajnybartek.libs.kyori')
 }
+
+jar {
+    enabled = false
+}
+
+build.dependsOn shadowJar
