--- a/build.gradle
+++ b/build.gradle
@@ -1,46 +1,70 @@
 plugins {
     id 'java'
-    id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id("xyz.jpenilla.run-paper") version "2.3.1"
+    id "io.github.goooler.shadow" version "8.1.8"
 }
 
 group = 'pl.tenfajnybartek'
-version = '0.0.1-SNAPSHOT'
-archivesBaseName = 'tfbdeathban'
-
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
+version = '1.0.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
-    maven { url = 'https://repo.papermc.io/repository/maven-public/' }
+    maven {
+        name = "papermc-repo"
+        url = "https://repo.papermc.io/repository/maven-public/"
+    }
+    maven {
+        name = 'sonatype-releases'
+        url = uri('https://oss.sonatype.org/content/repositories/releases/')
+    }
+    maven {
+        url = uri('https://jitpack.io')
+    }
 }
 
 dependencies {
-    compileOnly 'io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT'
-
-    implementation 'com.zaxxer:HikariCP:5.1.0'
+    compileOnly("io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT")
+    compileOnly 'net.kyori:adventure-api:4.14.0'
+    compileOnly "net.kyori:adventure-platform-bukkit:4.4.0"
+    implementation 'com.zaxxer:HikariCP:5.0.1'
     implementation 'mysql:mysql-connector-java:8.0.33'
-
-    implementation 'net.kyori:adventure-api:4.14.0'
-    implementation 'net.kyori:adventure-platform-bukkit:4.3.2'
 }
 
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
-
-tasks.shadowJar {
+shadowJar {
     archiveClassifier.set('')
-    // Opcjonalnie relokuj biblioteki (chroni przed konfliktami z innymi pluginami MC)
-    relocate('com.zaxxer.hikari', 'pl.tenfajnybartek.libs.hikari')
-    relocate('org.slf4j', 'pl.tenfajnybartek.libs.slf4j')
-    relocate('org.apache.commons', 'pl.tenfajnybartek.libs.commons')
-    relocate('com.mysql', 'pl.tenfajnybartek.libs.mysql')
-    relocate('net.kyori', 'pl.tenfajnybartek.libs.kyori')
+    relocate 'com.zaxxer.hikari', 'pl.tenfajnybartek.libs.hikari'
+    relocate 'com.mysql', 'pl.tenfajnybartek.libs.mysql'
+    minimize()
 }
 
-jar {
-    enabled = false
+def targetJavaVersion = 21
+java {
+    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
+    sourceCompatibility = javaVersion
+    targetCompatibility = javaVersion
+    if (JavaVersion.current() < javaVersion) {
+        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
+    }
 }
 
-build.dependsOn shadowJar
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+    options.release.set(targetJavaVersion)
+}
+
+
+tasks {
+    runServer {
+        minecraftVersion("1.21")
+    }
+}
+tasks.build.dependsOn tasks.shadowJar
+
+processResources {
+    def props = [version: version]
+    inputs.properties props
+    filteringCharset 'UTF-8'
+    filesMatching('plugin.yml') {
+        expand props
+    }
+}
