--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -13,24 +13,28 @@ messages:
   not_banned: "&cGracz &e%0 &cnie jest zbanowany."
   unban: "&aGracz &e%0 &azostał odbanowany."
   ban_check: "&e%0 &ajest zbanowany do &b%1"
-  deathban: "&cZostales zbanowany do &e%0&c!"
-  ban_kick: "&4&lBAN SMIERTELNY: &cNie mozesz wejsc na serwer do &e%0 &c!"
-  already_banned: "&cGracz &e%0 &cjest już zbanowany."
   reload: "&aKonfiguracja została przeładowana."
   error: "&cWystąpił błąd: &e%0"
-  preban_message: "&cZostales smiertelnie ranny! Za &e%time% &csekund zostaniesz zbanowany po smierci!"
-  final_ban_message: "&cZostales zbanowany po smierci! Powrót na serwer możliwy do &e%date%&c!"
+
+  # Obsługa banów po śmierci ↓
+  already_banned: "&cGracz &e%0 &cjest już zbanowany."
+  ban_kick: "&4&lBAN ŚMIERTELNY: &cNie możesz wejść na serwer do &e%0 &c!"
+  deathban: "&cZostałeś zbanowany do &e%0&c!"
+  preban_message: "&cZostałeś śmiertelnie ranny! Za &e%time% &csekund zostaniesz zbanowany po śmierci!"
+  final_ban_message: "&cZostałeś zbanowany po śmierci! Powrót na serwer możliwy po &e%date%&c!"
 
 settings:
+  # czas banowania w sekundach (domyślnie: 24h)
   deathban_seconds: 86400
+  # permisja na wyjątek od bana po śmierci
   exempt_permission: "deathban.vip"
-  # czas pożegnania w sekundach
+  # ile sekund trwa odliczanie ostrzegawcze przed banem po śmierci
   preban_seconds: 20
-  # "chat", "title" lub "actionbar" dla odliczania
+  # typ wyświetlania wiadomości ostrzegawczej: "chat", "title" lub "actionbar"
   preban_display: "actionbar"
-  # Dźwięk przy każdej sekundzie odliczania (np. BLOCK_NOTE_BLOCK_PLING lub puste "")
+  # dźwięk podczas odliczania co sekundę
   preban_sound: "BLOCK_NOTE_BLOCK_PLING"
-  # "chat", "title" lub "actionbar" przy finalnym banie
+  # typ wyświetlania wiadomości o banie: "chat", "title" lub "actionbar"
   deathban_display: "title"
-  # Dźwięk przy finalnym banie (np. ENTITY_ENDER_DRAGON_GROWL lub puste "")
+  # dźwięk przy finalnym banie po śmierci
   deathban_sound: "ENTITY_ENDER_DRAGON_GROWL"
